WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23495
Mac and Windows <video> and <audio> elements do not support MPEG content
https://bugs.webkit.org/show_bug.cgi?id=23495
Summary
Mac and Windows <video> and <audio> elements do not support MPEG content
Eric Carlson
Reported
2009-01-22 21:41:54 PST
QuickTime on the Mac and Windows can open MPEG streams, but the media player on both platform disables MPEG tracks they are not tagged as "audio" or "video". Changing this will only require an adjustment to the code in the disableUnsupportedTracks methods.
Attachments
proposed patch
(50.15 KB, patch)
2009-01-22 21:49 PST
,
Eric Carlson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2009-01-22 21:48:18 PST
rdar://problem/5917509
Eric Carlson
Comment 2
2009-01-22 21:49:24 PST
Created
attachment 26956
[details]
proposed patch
Simon Fraser (smfr)
Comment 3
2009-02-12 14:10:57 PST
Comment on
attachment 26956
[details]
proposed patch
> + // different mpeg variants import as different track types so check for the "mpeg > + // characteristic" instead of hard coding the current list of mpeg media types
Sentence case please! r=me
Eric Carlson
Comment 4
2009-02-12 14:56:14 PST
Committed revision 40942
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug