2009-02-12  Eric Carlson  <eric.carlson@apple.com>

Simon Fraser

        Support MPEG content on Mac and Windows.
        <rdar://problem/5917509>
        https://bugs.webkit.org/show_bug.cgi?id=23495

        Test: media/audio-mpeg-supported.html

        * platform/graphics/mac/MediaPlayerPrivateQTKit.mm:
        (WebCore::MediaPlayerPrivate::disableUnsupportedTracks):

        * platform/graphics/win/QTMovieWin.cpp:
        (QTMovieWin::disableUnsupportedTracks):

        * platform/graphics/win/MediaPlayerPrivateQuickTimeWin.h: fix typo added in r40925

2009-02-12  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Simon Fraser.

        Support MPEG content on Mac and Windows.
        <rdar://problem/5917509>
        https://bugs.webkit.org/show_bug.cgi?id=23495

        * media/audio-mpeg-supported-expected.txt: Added.
        * media/audio-mpeg-supported.html: Added.
        * media/content/silence.mpg: Added.


Canonical link: https://commits.webkit.org/33058@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40942 268f45cc-cd09-0410-ab3c-d52691b4dbfc