WebCore/platform/graphics/win/MediaPlayerPrivateQuickTimeWin.h
@@ -107,7 +107,7 @@ private:
     virtual void movieNewImageAvailable(QTMovieWin*);
 
     // engine support
-    static MediaPlayerPrivateInterface* MediaPlayerPrivate::create(MediaPlayer*);
+    static MediaPlayerPrivateInterface* create(MediaPlayer*);
     static void getSupportedTypes(HashSet<String>& types);
     static MediaPlayer::SupportsType supportsType(const String& type, const String& codecs);
     static bool isAvailable();
